Fiz  o controler professor e ja mudei o Id

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Materia" asp-action="Index">Cadastro De materias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Cadastro De Professor</a>
+                        </li>
                     </ul>
                 </div>
             </div>
