Criação dos controllers do Bimestre e Aluno

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Cadastro De Professor</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bimestre" asp-action="Index">Cadastro De Bimestre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nota" asp-action="Index">Cadastro De Nota</a>
+                        </li>
                     </ul>
                 </div>
             </div>
