--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,19 +26,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Index">Cadastro De alunos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Materia" asp-action="Index">Cadastro De materias</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Materia" asp-action="Index">Materias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Cadastro De Professor</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Professor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bimestre" asp-action="Index">Cadastro De Bimestre</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bimestre" asp-action="Index">Bimestre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Nota" asp-action="Index">Cadastro De Nota</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nota" asp-action="Index">Notas</a>
                         </li>
                     </ul>
                 </div>
