--- a/Views/Professor/Index.cshtml
+++ b/Views/Professor/Index.cshtml
@@ -7,8 +7,17 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar de novo Professor</a>
 </p>
+<div>
+    @using (Html.BeginForm("Index", "Professor", FormMethod.Get))
+    {
+                <p>
+                    Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
+                    <input type="submit" value="Pesquisar" />
+                </p>
+    }
+</div>
 <table class="table">
     <thead>
         <tr>
