--- a/Views/Aluno/Index.cshtml
+++ b/Views/Aluno/Index.cshtml
@@ -7,8 +7,15 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar novo aluno</a>
 </p>
+@using (Html.BeginForm("Index", "Aluno", FormMethod.Get))
+{
+                    <p>
+                        Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
+                        <input type="submit" value="Pesquisar" />
+                    </p>
+}
 <table class="table">
     <thead>
         <tr>
