Adições na página inicial

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,22 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Esse é o sistema de cadastro de notas.</p>
+</div>
+<div>
+    <h3>Quer cadastrar um aluno?</h3>
+    <a href="https://localhost:7122/Aluno"> Clique aqui</a>
+</div>
+<div>
+    <h3>Quer cadastrar um Professor?</h3>
+    <a href="https://localhost:7122/Professor"> Clique aqui</a>
+</div>
+<div>
+    <h3>Quer cadastrar uma materia?</h3>
+    <a href="https://localhost:7122/Materia"> Clique aqui</a>
+</div>
+<div>
+    <h3>Quer adicionar uma nota?</h3>
+    <a href="https://localhost:7122/Nota"> Clique aqui</a>
 </div>
