--- a/Views/Materia/Index.cshtml
+++ b/Views/Materia/Index.cshtml
@@ -10,7 +10,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Adicionar nova materia</a>
 </p>
 <div>
     @using (Html.BeginForm("Index", "Materia", FormMethod.Get))
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.MateriaNome)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhe</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
