--- a/Views/Professor/Index.cshtml
+++ b/Views/Professor/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Cadastrar de novo Professor</a>
+    <a asp-action="Create">Cadastrar um novo Professor</a>
 </p>
 <div>
     @using (Html.BeginForm("Index", "Professor", FormMethod.Get))
@@ -52,9 +52,9 @@
                     @Html.DisplayFor(modelItem => item.Materia.MateriaNome)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhe</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
