Estilo da página inicial parcialamente pronto

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,19 +6,25 @@
     <h1 class="display-4">Bem vindo!</h1>
     <p>Esse é o sistema de cadastro de notas.</p>
 </div>
-<div>
-    <h3>Quer cadastrar um aluno?</h3>
-    <a href="https://localhost:7122/Aluno"> Clique aqui</a>
-</div>
-<div>
-    <h3>Quer cadastrar um Professor?</h3>
-    <a href="https://localhost:7122/Professor"> Clique aqui</a>
-</div>
-<div>
-    <h3>Quer cadastrar uma materia?</h3>
-    <a href="https://localhost:7122/Materia"> Clique aqui</a>
-</div>
-<div>
-    <h3>Quer adicionar uma nota?</h3>
-    <a href="https://localhost:7122/Nota"> Clique aqui</a>
+<div class="caixona">
+    <div class="caixa-maior1">
+        <div class="caixa-inicial">
+            <span>Quer cadastrar um aluno?</span>
+            <a href="https://localhost:7122/Aluno"> Clique aqui</a>
+        </div>
+        <div class="caixa-inicial">
+            <span>Quer cadastrar um Professor?</span>
+            <a href="https://localhost:7122/Professor"> Clique aqui</a>
+        </div>
+    </div>
+    <div class="caixa-maior2">
+        <div class="caixa-inicial">
+            <span>Quer cadastrar uma materia?</span>
+            <a href="https://localhost:7122/Materia"> Clique aqui</a>
+        </div>
+        <div class="caixa-inicial">
+            <span>Quer adicionar uma nota?</span>
+            <a href="https://localhost:7122/Nota"> Clique aqui</a>
+        </div>
+    </div>
 </div>
