--- a/Views/Professor/Create.cshtml
+++ b/Views/Professor/Create.cshtml
@@ -32,7 +32,7 @@
                 <select asp-for="MateriaId" class="form-control" asp-items="ViewBag.MateriaNome"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="criar" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
