--- a/Views/Professor/Edit.cshtml
+++ b/Views/Professor/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MateriaId" class="control-label"></label>
-                <select asp-for="MateriaId" class="form-control" asp-items="ViewBag.MateriaId"></select>
+                <select asp-for="MateriaId" class="form-control" asp-items="ViewBag.MateriaNome"></select>
                 <span asp-validation-for="MateriaId" class="text-danger"></span>
             </div>
             <div class="form-group">
