--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Notas</h1>
 
 <p>
-    <a asp-action="Create">Nova nota</a>
+    <a asp-action="Create">Adicionar nova nota</a>
 </p>
 <div>
     @using (Html.BeginForm("Index", "Nota", FormMethod.Get))
