--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="Materia" asp-action="Index">Materias</a>
+                            <a asp-area="" asp-controller="Materia" asp-action="Index">Matérias</a>
                         </li>
                         <li class="nav-item">
                             <a asp-area="" asp-controller="Professor" asp-action="Index">Professor</a>
