Bimestre e Materia adicionado botao

--- a/Views/Bimestre/Index.cshtml
+++ b/Views/Bimestre/Index.cshtml
@@ -6,9 +6,10 @@
 
 <h1>Bimestres</h1>
 
-<p>
-    <a asp-action="Create">Cadastrar novo Bimestre</a>
-</p>
+@using (Html.BeginForm("Create", "Bimestre", FormMethod.Get))
+{
+    <button>Cadastrar novo Bimestre</button>
+}
 <div>
     @using (Html.BeginForm("Index", "Bimestre", FormMethod.Get))
     {
