Finalização do projeto

--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm("Create", "Nota", FormMethod.Get))
 {
-    <button>Cadastrar novo Nota</button>
+    <button>Cadastrar nova nota</button>
 }
 <div>
     @using (Html.BeginForm("Index", "Nota", FormMethod.Get))
